<resources>
    <string name="app_name">FarmLog</string>

    <!--Login-->
    <string name="label_welcome">Welcome Back</string>
    <string name="label_continue">Please login to continue</string>
    <string name="label_login">Login</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="logo_text">Farm Log</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="hint_full_name">Fullname</string>
    <string name="hint_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_farm_name">Farm name</string>
    <string name="label_farm_location">Farm location</string>
    <string name="label_save">Save</string>
    <string name="label_farm_coordinates">Farm coordinates</string>
    <string name="label_add">Add</string>
    <string name="label_view_map">View on map</string>
    <string name="error_image_not_selected">Farmer\'s image not captured</string>
    <string name="error_full_name">Full name format not valid</string>
    <string name="error_phone_number">Invalid phone number entered</string>
    <string name="error_age">Age entered not valid. Minimum age is 15.</string>
    <string name="error_gender">Gender not selected</string>
    <string name="error_farm_name">Farm name not provided</string>
    <string name="error_farm_location">Farm location not provided</string>
    <string name="error_coordinates">Incomplete farm coordinates, at least three coordinates required</string>
    <string name="label_dialog_title">"How would like to pick location "</string>
    <string name="action_current_location">Current location</string>
    <string name="action_pick_on_map">Pick on map</string>
    <string name="label_new_farm">New Farm</string>
    <string name="format_location">%f,%f</string>
    <string name="label_image">Image</string>
    <string name="label_map">Map</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXVtYXJiZWxsbyIsImEiOiJjazl0eGRjb2kwOGdwM2hub3QyOGE1cHc3In0.kdjd_-x4NU46HclzvwXtGg</string>
    <string name="label_location_prompt">Confirm location selected</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_no_entry">No farms recorded yet.</string>
    <string name="label_logOut">Log out</string>
    <string name="label_logOut_prompt">Logging out will clear all data!</string>
    <string name="action_logOut">Log out</string>
</resources>
